--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -7,11 +7,11 @@
     <title>News Briefs</title>
 </head>
 <body>
-    { block=content }
+    {% block content %}
     {% extends 'bootstrap/base.html'%}
     <h1>hellow world</h1>
 
-    { endblock}
+    {% endblock %}
     
 </body>
 </html>
