--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
-
+{% block content %}
 <div class="jumbotron" style="height: 400px;">
-    <img src="{{ Articles.urlToImage }}" alt="" srcset="">
-    <h1 class="display-4">{{ title }}</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </p>
+  <div class="row">
+    <div class="card" style="width: 10rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
   </div>
+</div>
+
+<!-- ========================================================== -->
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -34,3 +36,4 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  {% endblock %}
