--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -19,17 +19,22 @@
 
 <!-- ========================================================== -->
 
+<div class="container">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="{{ article.id }}" class="active"></li>
     </ol>
     <div class="carousel-inner">
+      {% for article in articles %}
       <div class="carousel-item active">
-        <img class="d-block w-100" src="..." alt="First slide">
+       <a href="{{ article.url }}" target="_blank" rel="noopener noreferrer"><img class="d-block w-100" src="{{ article.urlToImage }}" alt=""></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h3>{{ article.title }}</h3>
+          <p>{{ article.description }}</p>
+        </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Second slide">
-      </div>
+      {% endfor %}
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -40,4 +45,5 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+</div> 
   {% endblock %}
