--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title> {{ title }}</title>
+    <title>{{ title }}</title>
     {% else %}
     <title>News Center</title>
     {% endif %}
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-    {% block content %}
+    {% include "navbar.html" ignore missing %}
 
-    
+
+    {% block content %}
     {% endblock %}
     
 </body>
