adding a search bar

--- a/news/templates/macro.html
+++ b/news/templates/macro.html
@@ -1,4 +1,4 @@
-{% macro displayList(news_list) %}
+{% macro display(news_list) %}
 
     {% for news in news_list %}
 
@@ -12,10 +12,8 @@
       </div>
     </div>
   </div>
+
+  
 {% endfor %}
-
-
-
-
 
 {% endmacro %}
