--- a/news/templates/disp_search.html
+++ b/news/templates/disp_search.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% import 'macros.html' as macro%}
+{% import 'macro.html' as macro %}
 {% block content %}
 <h1>{{ title }}</h1>
-<h3> We have Found {{ news| count }} matching your search </h3>
+<h3> We have Found matching your search </h3>
 <div class="container-fluid">
     <div class="row">
-        {{ macro.displayList(news)}}
+        {{ macro.display(news)}}
     </div>
   </div>  
 {% endblock %}
