--- a/news/templates/index.html
+++ b/news/templates/index.html
@@ -29,7 +29,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ article.title }}</h5>
           <p class="card-text">{{ article.description }}</p>
-          <a href="{{ article.url }}" class="btn btn-primary">read more</a>
+          <a href="{{ article.url }}" target="_blank" class="btn btn-primary">read more</a>
         </div>
       </div>
     </div>
